feat: provide lacking endpoints
